--- a/cli/endpoints/online/mlflow/sklearn-deployment.yaml
+++ b/cli/endpoints/online/mlflow/sklearn-deployment.yaml
@@ -1,10 +1,11 @@
 $schema: https://azuremlschemas.azureedge.net/latest/managedOnlineDeployment.schema.json
 name: sklearn-deployment
-endpoint_name: my-endpoint
+type: kubernetes
+endpoint_name: my-mlflow
 model:
   name: mir-sample-sklearn-mlflow-model
   version: 1
   path: sklearn-diabetes/model
   type: mlflow_model
-instance_type: Standard_DS2_v2
+instance_type: gpuinstance
 instance_count: 1
