--- a/cli/assets/model/hello-data-uri-folder-local.yml
+++ b/cli/assets/model/hello-data-uri-folder-local.yml
@@ -1,10 +1,10 @@
 $schema: https://azuremlschemas.azureedge.net/latest/commandJob.schema.json
-name: custom_model_inline_lochen
+display_name: uri_folder_inline_lochen
 command: |
   ls ${{inputs.sampledata}}
 inputs:
   sampledata:
-    type: custom_model
+    type: uri_folder
     path: mlflow-model
     mode: ro_mount
 environment: azureml:AzureML-sklearn-1.0-ubuntu20.04-py38-cpu@latest
