--- a/cli/jobs/pipelines-with-components/basics/2a_basic_component/component.yml
+++ b/cli/jobs/pipelines-with-components/basics/2a_basic_component/component.yml
@@ -4,7 +4,9 @@ type: command
 name: hello_python_world
 display_name: Hello_Python_World
 version: 1
-
+inputs:
+  number: 1.0
+  
 code: ./src
 
 environment: 
