Test DPv2 for Office

--- a/sdk/resources/workspace/config.json
+++ b/sdk/resources/workspace/config.json
@@ -1,5 +1,5 @@
 {
-    "subscription_id": "6560575d-fa06-4e7d-95fb-f962e74efd7a",
-    "resource_group": "azureml-examples-rg",
-    "workspace_name": "main"
+    "subscription_id": "60d27411-7736-4355-ac95-ac033929fe9d",
+    "resource_group": "MOP.HERON.PROD.c499b17e-00ac-4b99-a999-4932adb26a8d",
+    "workspace_name": "amlworkspace725jmzufbhxww"
 }
