--- a/cli/assets/component/train.yml
+++ b/cli/assets/component/train.yml
@@ -4,7 +4,7 @@ display_name: train_data
 description: A example train component
 tags:
   author: azureml-sdk-team
-version: 3
+# version: 5 # optional, if omitted will use create time as version
 type: command
 inputs:
   training_data: 
@@ -16,7 +16,13 @@ inputs:
     default: 0.01
   learning_rate_schedule: 
     type: string
-    default: time-based 
+    enum:
+      - time-based
+      - step
+      - exponential
+    default: time-based
+    optional: true
+    # $[[command code snippet include optional inputs]] to indicate this code need be hidden if optional inputs are not provided
 outputs:
   model_output:
     type: uri_folder
@@ -27,5 +33,5 @@ command: >-
   --training_data ${{inputs.training_data}} 
   --max_epocs ${{inputs.max_epocs}}   
   --learning_rate ${{inputs.learning_rate}} 
-  --learning_rate_schedule ${{inputs.learning_rate_schedule}} 
+  $[[--learning_rate_schedule ${{inputs.learning_rate_schedule}}]]
   --model_output ${{outputs.model_output}}
