--- a/cli/assets/component/train.yml
+++ b/cli/assets/component/train.yml
@@ -11,6 +11,8 @@ inputs:
     type: uri_folder
   max_epocs:
     type: integer
+    optional: true
+    # $[[command code snippet include optional inputs]] to indicate this code need be hidden if optional inputs are not provided
   learning_rate: 
     type: number
     default: 0.01
@@ -20,9 +22,6 @@ inputs:
       - time-based
       - step
       - exponential
-    default: time-based
-    optional: true
-    # $[[command code snippet include optional inputs]] to indicate this code need be hidden if optional inputs are not provided
 outputs:
   model_output:
     type: uri_folder
@@ -31,7 +30,7 @@ environment: azureml:AzureML-sklearn-0.24-ubuntu18.04-py37-cpu:1
 command: >-
   python train.py 
   --training_data ${{inputs.training_data}} 
-  --max_epocs ${{inputs.max_epocs}}   
+  $[[--max_epocs ${{inputs.max_epocs}}]]
   --learning_rate ${{inputs.learning_rate}} 
-  $[[--learning_rate_schedule ${{inputs.learning_rate_schedule}}]]
+  --learning_rate_schedule ${{inputs.learning_rate_schedule}}
   --model_output ${{outputs.model_output}}
