remove input data

--- a/sdk/jobs/pipelines/1a_pipeline_with_components_from_yaml/score_data.yml
+++ b/sdk/jobs/pipelines/1a_pipeline_with_components_from_yaml/score_data.yml
@@ -5,7 +5,7 @@ name: score_data
 version: 0.0.1
 display_name: Score Data
 description: A dummy scoring component
-
+datastore: heron_sandbox_storage
 inputs:
   model_input:
     type: uri_folder
