--- a/sdk/jobs/pipelines/1a_pipeline_with_components_from_yaml/eval_model.yml
+++ b/sdk/jobs/pipelines/1a_pipeline_with_components_from_yaml/eval_model.yml
@@ -5,6 +5,7 @@ name: eval_model
 version: 0.0.1
 display_name: Eval Model
 description: A dummy evaluate component
+datastore: heron_sandbox_storage
 inputs:
   scoring_result:
     type: uri_folder
