--- a/sdk/jobs/pipelines/1a_pipeline_with_components_from_yaml/train_model.yml
+++ b/sdk/jobs/pipelines/1a_pipeline_with_components_from_yaml/train_model.yml
@@ -5,7 +5,7 @@ name: train_model
 display_name: Train Model
 description: A dummy training component
 version: 0.0.1
-datastore: heron_sandbox_storage
+# datastore: heron_sandbox_storage
 inputs:
   training_data: 
     type: uri_folder
@@ -22,7 +22,10 @@ inputs:
 outputs:
   model_output:
     type: uri_folder
-code: ./train_src
+# code: ./train_src
+code: 
+  path: ./train_src
+  datastore: heron_sandbox_storage
 environment: azureml:AzureML-sklearn-0.24-ubuntu18.04-py37-cpu:5
 command: >-
   python train.py 
